Fixed info-blocks wrap Omitted info-blocks from group padding (too wide), added max width

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 .body-2,
 /* .body-3, */
 /* .body-4, */
-.info-blocks,
+/* .info-blocks, */
 .footer {
     padding: 12px 200px;
 }
@@ -107,9 +107,10 @@ body {
     display: flex;
     gap: 40px;
     padding-bottom: 32px;
-    width: 1000px;
+    max-width: 1000px;
     justify-content: center;
     flex-wrap: wrap;
+ 
     /* flex-wrap: wrap;
     align-items: center; */
 }
@@ -119,7 +120,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 200px;
-    
+    flex: 1 1 auto;
 }
 
 .info-blocks img {
